--- a/package.json
+++ b/package.json
@@ -7,6 +7,20 @@
   "types": "lib/typescript/index.d.ts",
   "react-native": "src/index.ts",
   "source": "src/index.ts",
+  "exports": {
+    ".": {
+      "react-native": "./src/index.ts",
+      "import": "./lib/module/index.js",
+      "require": "./lib/commonjs/index.js",
+      "types": "./lib/typescript/index.d.ts"
+    },
+    "./navigation": {
+      "react-native": "./src/navigation/index.ts",
+      "import": "./lib/module/navigation/index.js",
+      "require": "./lib/commonjs/navigation/index.js",
+      "types": "./lib/typescript/navigation/index.d.ts"
+    }
+  },
   "files": [
     "src",
     "lib",
